--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="imgs/navLogo.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="imgs/titleCatLogo.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Poppins:wght@400;500&family=Raleway:wght@700&display=swap" rel="stylesheet">
+
+    <link href="./CSS/Normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/media.css">
+
     <title>CAT Reloaded</title>
 </head>
 
@@ -19,45 +23,50 @@
     <!--start navbar-->
     <nav class="navbar navbar-expand-lg navbar-light" id="nav">
         <div class="container-lg">
-            <a class="navbar-brand" href="#"><img src="./imgs/navLogo.svg"></a>
+            <a class="navbar-brand" href="index.html"><img src="./imgs/navLogo.svg" alt="navLogo"></a>
 
             <button class="navbar-toggler topmenu" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item align-items-lg-center d-flex justify-content-lg-center ">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                    <li class="nav-item align-items-lg-center justify-content-lg-center d-flex">
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
                         <a class="nav-link" href="Events.html">Events</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CATzins</a>
+                    <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
+                        <a class="nav-link" href="#">CATazine</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Committes</a>
+                    <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
+                        <a class="nav-link" href="Committees.html">Committees</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contactus</a>
+                    <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
+                        <a class="nav-link" href="ContactUs.html">Contact us</a>
                     </li>
+                    <li class="nav-item  d-lg-none">
+                        <span class="navbar-text d-grid gap-2 mx-2 newsletter">
+                            <button type="button" class="btn btn-large"  data-bs-toggle="modal" data-bs-target="#newsletterModal">newsletter</button>
+                        </span> </li>
                 </ul>
-                <span class="navbar-text d-grid gap-2 mx-2 newsletter">
+                <span class="navbar-text d-grid gap-2 mx-2 newsletter d-none d-lg-grid">
 
-                        <button type="button" class="btn btn-large">newsletter</button>
-                    </span>
+                    <button type="button" class="btn btn-large"  data-bs-toggle="modal" data-bs-target="#newsletterModal">newsletter</button>
+                </span>
+
             </div>
 
         </div>
     </nav>
     <!--end navbar-->
     <!--start header-->
-    <header class="container-fluid">
+    <header class="container-fluid position-relative">
         <div class="overlay d-flex justify-content-center align-items-center">
-            <img src="./imgs/logo header.svg" class="img-responsive img-fluid">
+            <img src="./imgs/logoheader.svg" class="img-responsive img-fluid" alt="sliderLogo">
         </div>
     </header>
 
@@ -73,24 +82,25 @@
                         <q>a non-profit foundation focused on</q>. Computer Science and IT specially Open Source technologies. CAT's primary goal was to create an IT community in Mansoura University that is dynamic, innovative and highly scalable for
                         the undergraduate computer engineering/science students, that would help them achieve a good level of technical proficiency through projects and seminars.
                     </p>
-                    <a class="btn outline-cat-button ">
+                    <a class="btn outline-cat-button">
                        Read More ...
                     </a>
                 </div>
                 <div class="col-md-5 justify-content-center d-none d-md-flex col-lg-6">
-                    <img src="./imgs/Vector.svg" class="img-responsive img-fluid" alt="CAT Reloaded Vector">
+                    <img src="./imgs/Vector.svg" class="img-responsive img-fluid" alt="About Cat Reloaded ">
                 </div>
             </div>
         </div>
     </section>
 
+    <!--achievments section -->
 
     <section class="ourachievments">
         <div class="container-lg justify-content-center">
             <h2>
                 More than 25 years of CATian
             </h2>
-            <div class="row py-5">
+            <div class="row pt-5 pb-3">
                 <div class=" col-4 col-md-2 col-lg-2">
                     <ul class="list-unstyled d-flex justify-content-center flex-column gap-1 align-items-center ">
                         <li> <i class="fas fa-video"></i></li>
@@ -133,7 +143,7 @@
 
                 <div class=" col-4 col-md-2 col-lg-2">
                     <ul class="list-unstyled d-flex justify-content-center flex-column gap-1 align-items-center ">
-                        <li> <img src="./imgs/Layer 2.svg"></li>
+                        <li> <img src="./imgs/session.svg" alt="sessions"></li>
                         <li> <span data-count="200">200</span>+</li>
                         <li>Sessions</li>
                     </ul>
@@ -151,21 +161,19 @@
         <div class="container-sm">
             <h2>Our Events</h2>
             <div class="row justify-content-center">
-                <div class="col-md-10">
-
-
-                    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="col-md-10 col-lg-11 col-xl-10">
+                    <div id="events" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#events" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#events" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#events" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active " data-bs-interval="10000">
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
-                                            <img src="./imgs/event3.jpg" class="img-fluid rounded" alt="...">
+                                            <img src="./imgs/event3.jpg" class="img-fluid rounded" alt="event1">
                                         </div>
                                         <div class="col-md-12 col-lg-8">
                                             <div class="card-body">
@@ -194,7 +202,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
-                                            <img src="./imgs/Up Event cover.png" class="img-fluid rounded" alt="event1">
+                                            <img src="./imgs/UpEventcover.png" class="img-fluid rounded" alt="event2">
                                         </div>
                                         <div class="col-md-12 col-lg-8">
                                             <div class="card-body">
@@ -223,7 +231,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
-                                            <img src="./imgs/event1.png" class="img-fluid rounded" alt="event1">
+                                            <img src="./imgs/event1.png" class="img-fluid rounded" alt="event3">
                                         </div>
                                         <div class="col-md-12 col-lg-8">
                                             <div class="card-body">
@@ -256,20 +264,18 @@
 
                 </div>
 
-
-
             </div>
         </div>
     </section>
 
 
     <!--our events section -->
-    <section class="ourevents lastProjects">
+    <section class="lastProjects">
 
         <div class="container-sm">
             <h2>Last Projects</h2>
             <div class="row justify-content-center">
-                <div class="col-md-10">
+                <div class="col-md-10 col-lg-11 col-xl-10">
                     <div id="latestProject" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#latestProject" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -281,7 +287,7 @@
 
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
-                                            <img src="./imgs/kawen.png" class="img-fluid rounded" alt="...">
+                                            <img src="./imgs/kawen.png" class="img-fluid rounded" alt="project1">
                                         </div>
                                         <div class="col-md-12 col-lg-8">
                                             <div class="card-body">
@@ -307,7 +313,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
-                                            <img src="./imgs/kawen.png" class="img-fluid rounded" alt="event1">
+                                            <img src="./imgs/kawen.png" class="img-fluid rounded" alt="project2">
                                         </div>
                                         <div class="col-md-12 col-lg-8">
                                             <div class="card-body">
@@ -335,12 +341,12 @@
         </div>
     </section>
 
-
+    <!--Sponsors section-->
     <section class="sponsors">
 
         <h2>Our Sponsors</h2>
         <div class="container-sm">
-            <div class="row justify-content-center">
+            <div class="row d-flex justify-content-center">
 
                 <div class="col-md-10">
 
@@ -348,22 +354,22 @@
 
                         <div class="carousel-inner row justify-content-center">
                             <div class="carousel-item active " data-bs-interval="1000">
-                                <img src="./imgs/triago.png">
+                                <img src="./imgs/triago.png" alt="sponsor1">
                             </div>
                             <div class="carousel-item " data-bs-interval="2000">
-                                <img src="./imgs/triago.png">
+                                <img src="./imgs/triago.png" alt="sponsor2">
                             </div>
 
                             <div class="carousel-item " data-bs-interval="3000">
-                                <img src="./imgs/triago.png">
+                                <img src="./imgs/triago.png" alt="sponsor3">
                             </div>
 
                             <div class="carousel-item" data-bs-interval="4000">
-                                <img src="./imgs/triago.png">
+                                <img src="./imgs/triago.png" alt="sponsor4">
                             </div>
 
                             <div class="carousel-item" data-bs-interval="5000">
-                                <img src="./imgs/triago.png">
+                                <img src="./imgs/triago.png" alt="sponsor5">
                             </div>
                         </div>
                     </div>
@@ -373,12 +379,12 @@
     </section>
 
 
-
+    <!--footer-->
     <footer>
         <div class="container">
-            <div class="row ">
-                <div class="col-md-3 logo  py-2 justify-content-sm-center d-flex">
-                    <img src="./imgs/navLogo.svg" class="img-responsive img-fluid">
+            <div class="row d-flex justify-content-sm-center flex-wrap ">
+                <div class="col-md-3 logo  pb-2 justify-content-center d-flex">
+                    <img src="./imgs/navLogo.svg" class="img-responsive img-fluid" alt="footerLogo">
                 </div>
                 <div class="col-md-3  py-2">
                     <h3>
@@ -389,22 +395,22 @@
                     </p>
                 </div>
 
-                <div class="col-md-3 col-5  py-2">
-                    <h3 class="text-sm-center">
+                <div class="col-md-3 col-sm-4 px-3 col-6  px-lg-0 py-2">
+                    <h3 class="text-center">
                         ANNUAL PARTNER
                     </h3>
-                    <ul class="list-unstyled d-flex justify-content-sm-center gap-1 flex-row ">
-                        <li><img src="./imgs/triago.png" class="img-responsive img-fluid"></li>
-                        <li><img src="./imgs/triago.png" class="img-responsive img-fluid"></li>
+                    <ul class="list-unstyled d-flex justify-content-center gap-1 flex-row ">
+                        <li><img src="./imgs/triago.png" class="img-responsive img-fluid" alt="sposnsor"></li>
+                        <li><img src="./imgs/triago.png" class="img-responsive img-fluid" alt="sponsor"></li>
                     </ul>
                 </div>
 
 
-                <div class="col-md-3 py-2 col-5">
-                    <h3 class="px-lg-3 px-3 px-sm-4 px-md-0">
+                <div class="col-md-3 py-2 px-3 px-lg-0 col-6 col-sm-4">
+                    <h3 class="text-center">
                         FOLLOW US
                     </h3>
-                    <ul class="list-unstyled d-flex gap-3 flex-row">
+                    <ul class="list-unstyled d-flex gap-2 flex-row justify-content-center">
 
                         <li>
                             <a href="https://www.facebook.com/CATReloaded?_rdc=1&_rdr"><i class="fab fa-facebook-f"></i></a>
@@ -429,6 +435,45 @@
         </div>
     </footer>
 
+
+    <!--newsletter Modal-->
+    <div class="modal fade" id="newsletterModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <button type="button" class="btn-close align-self-end" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-lg-6 align-items-center justify-content-center">
+                        <img src="imgs/subscribe.svg" class="img-fluid img-responsive" alt="modalSubscribeVector">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-lg-6 content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="ModalLabel">Subscribe to our Newsletter!</h5>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                We'll informed you with our new blogs and the latest updates!
+                            </p>
+                            <form class="row g-3">
+
+                                <div>
+                                    <input type="text" class="form-control" id="username" name="username" value="" placeholder="Name">
+                                </div>
+                                <div class="">
+                                    <input type="Email" class="form-control" id="inputEmail" name="email" value="" placeholder="Email">
+                                </div>
+                                <div>
+                                    <button type="submit" class="btn col-12">Subscribe</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
 
     <button type="button" class="btn btn-floating btn-md" id="btn-back-to-top">
   <i class="fas fa-arrow-up"></i>
