--- a/Events.html
+++ b/Events.html
@@ -5,106 +5,120 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="imgs/navLogo.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="imgs/titleCatLogo.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Poppins:wght@400;500&family=Raleway:wght@700&display=swap" rel="stylesheet">
+
+    <link href="./CSS/Normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>CAT Reloaded Events</title>
+    <link rel="stylesheet" href="./CSS/media.css">
+
+    <title> Events</title>
 </head>
 
 <body>
 
     <!--start navbar-->
-
     <nav class="navbar navbar-expand-lg navbar-light sticky" id="nav">
         <div class="container-lg">
-            <a class="navbar-brand" href="#"><img src="./imgs/catBlack.svg"></a>
+            <a class="navbar-brand" href="index.html"><img src="./imgs/catBlack.svg" alt="navLogo"></a>
 
             <button class="navbar-toggler topmenu" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
+                <span class="navbar-toggler-icon"></span>
+              </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item align-items-lg-center d-flex justify-content-lg-center ">
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">About</a>
+                    <li class="nav-item align-items-lg-center justify-content-lg-center d-flex">
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
                         <a class="nav-link active" href="Events.html">Events</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CATzins</a>
+                    <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
+                        <a class="nav-link" href="#">CATazine</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Committes</a>
+                    <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
+                        <a class="nav-link" href="Committees.html">Committees</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contactus</a>
+                    <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
+                        <a class="nav-link" href="ContactUs.html">Contact us</a>
                     </li>
+                    <li class="nav-item  d-lg-none">
+                        <span class="navbar-text d-grid gap-2 mx-2 newsletter">
+                            <button type="button" class="btn btn-large"  data-bs-toggle="modal" data-bs-target="#newsletterModal">newsletter</button>
+                        </span> </li>
                 </ul>
-                <span class="navbar-text d-grid gap-2 mx-2 newsletter">
-    
-                            <button type="button" class="btn btn-large">newsletter</button>
-                        </span>
+                <span class="navbar-text d-grid gap-2 mx-2 newsletter d-none d-lg-grid">
+
+                    <button type="button" class="btn btn-large"  data-bs-toggle="modal" data-bs-target="#newsletterModal">newsletter</button>
+                </span>
+
             </div>
 
         </div>
     </nav>
     <!--end navbar-->
 
+    <!--Aboutus Header-->
     <header class="about">
 
         <div class="container">
             <div class="row">
-                <div class="col-6 d-flex flex-column gap-2 justify-content-center">
-                    <img class="img-responsive align-self-center" src="./imgs/layer1 (4).svg">
-                    <h1 class="text-left px-2 px-sm-0 text-sm-center">CAT <span>Events</span></h1>
+                <div class="col-5 col-sm-6 d-flex flex-column gap-2 justify-content-center">
+                    <img class="img-responsive align-self-center" src="./imgs/catLogo.svg" alt="catlogo">
+                    <h1>CAT <span>Events</span></h1>
                 </div>
                 <div class="col-6 d-flex flex-column gap-2 justify-content-center">
-                    <img class="img-responsive align-self-center img-fluid" src="./imgs/salary-day.svg">
+                    <img class="img-responsive align-self-center img-fluid" src="./imgs/salary-day.svg" alt="aboutus">
                 </div>
             </div>
         </div>
     </header>
 
 
+
+
     <!--section of events-->
     <section class="events ourevents">
-
         <div class="dots">
-            <img src="./imgs/black dots.svg">
-            <img src="./imgs/reddots.svg">
-            <img src="./imgs/reddots.svg">
-            <img src="./imgs/black dots.svg">
-            <img src="./imgs/black dots.svg">
-            <img src="./imgs/reddots.svg">
-            <img src="./imgs/reddots.svg">
-            <img src="./imgs/black dots.svg">
-
+            <img src="./imgs/black dots.svg" alt="...">
+            <img src="./imgs/reddots.svg" alt="...">
+            <img src="./imgs/reddots.svg" alt="...">
+            <img src="./imgs/black dots.svg" alt="...">
+            <img src="./imgs/black dots.svg" alt="...">
+            <img src="./imgs/reddots.svg" alt="...">
+            <img src="./imgs/reddots.svg" alt="...">
+            <img src="./imgs/black dots.svg" alt="...">
         </div>
         <div class="container">
 
             <div class="row justify-content-center">
-                <div class="col-md-10">
+                <div class="col-sm-10 col-lg-11 col-xl-10">
                     <div id="events" class="carousel slide" data-bs-interval="false">
                         <ul class="carousel-indicators">
-                            <button class="carousel-control-prev" type="button" data-bs-target="#events" data-bs-slide="prev">
+
+                            <li><button class="carousel-control-prev" type="button" data-bs-target="#events" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
                               </button>
+                            </li>
 
                             <li data-bs-target="#events" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1">1</li>
-                            <li data-bs-target="#events" data-bs-slide-to="1" aria-label="Slide 2" value="2">2</li>
+                            <li data-bs-target="#events" data-bs-slide-to="1" aria-label="Slide 2">2</li>
                             <li data-bs-target="#events" data-bs-slide-to="2" aria-label="Slide 3">3</li>
                             <li data-bs-target="#events" data-bs-slide-to="3" aria-label="Slide 4">4</li>
-                            <button class="carousel-control-next" type="button" data-bs-target="#events" data-bs-slide="next">
+                            <li>
+                                <button class="carousel-control-next" type="button" data-bs-target="#events" data-bs-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
                               </button>
+                            </li>
+
 
                         </ul>
 
@@ -113,7 +127,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
-                                            <img src="./imgs/event3.jpg" class="img-fluid rounded" alt="...">
+                                            <img src="./imgs/event3.jpg" class="img-fluid rounded" alt="event">
                                         </div>
                                         <div class="col-md-12 col-lg-8">
                                             <div class="card-body">
@@ -141,7 +155,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
-                                            <img src="./imgs/event3.jpg" class="img-fluid rounded" alt="...">
+                                            <img src="./imgs/event3.jpg" class="img-fluid rounded" alt="event">
                                         </div>
                                         <div class="col-md-12 col-lg-8">
                                             <div class="card-body">
@@ -551,15 +565,17 @@
                     </div>
                 </div>
             </div>
+        </div>
 
     </section>
 
 
+    <!--footer-->
     <footer>
         <div class="container">
-            <div class="row ">
-                <div class="col-md-3 logo  py-2 justify-content-sm-center d-flex">
-                    <img src="./imgs/navLogo.svg" class="img-responsive img-fluid">
+            <div class="row d-flex justify-content-center flex-wrap ">
+                <div class="col-md-3 logo  pb-2 justify-content-center d-flex">
+                    <img src="./imgs/navLogo.svg" class="img-responsive img-fluid" alt="footerLogo">
                 </div>
                 <div class="col-md-3  py-2">
                     <h3>
@@ -570,22 +586,22 @@
                     </p>
                 </div>
 
-                <div class="col-md-3 col-5  py-2">
-                    <h3 class="text-sm-center">
+                <div class="col-md-3 col-sm-4 px-3 col-6  px-lg-0 py-2">
+                    <h3 class="text-center">
                         ANNUAL PARTNER
                     </h3>
-                    <ul class="list-unstyled d-flex justify-content-sm-center gap-1 flex-row ">
-                        <li><img src="./imgs/triago.png" class="img-responsive img-fluid"></li>
-                        <li><img src="./imgs/triago.png" class="img-responsive img-fluid"></li>
+                    <ul class="list-unstyled d-flex justify-content-center gap-1 flex-row ">
+                        <li><img src="./imgs/triago.png" class="img-responsive img-fluid" alt="sposnsor"></li>
+                        <li><img src="./imgs/triago.png" class="img-responsive img-fluid" alt="sponsor"></li>
                     </ul>
                 </div>
 
 
-                <div class="col-md-3 py-2 col-5">
-                    <h3 class="px-lg-3 px-3 px-sm-4 px-md-0">
+                <div class="col-md-3 py-2 px-3 px-lg-0 col-5 col-sm-4">
+                    <h3 class="text-center">
                         FOLLOW US
                     </h3>
-                    <ul class="list-unstyled d-flex gap-3 flex-row">
+                    <ul class="list-unstyled d-flex gap-2 flex-row justify-content-center">
 
                         <li>
                             <a href="https://www.facebook.com/CATReloaded?_rdc=1&_rdr"><i class="fab fa-facebook-f"></i></a>
@@ -611,6 +627,44 @@
     </footer>
 
 
+    <!--newsletter Modal-->
+    <div class="modal fade" id="newsletterModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <button type="button" class="btn-close align-self-end" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-lg-6 align-items-center justify-content-center">
+                        <img src="imgs/subscribe.svg" class="img-fluid img-responsive" alt="modalSubscribeVector">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-lg-6 content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="ModalLabel">Subscribe to our Newsletter!</h5>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                We'll informed you with our new blogs and the latest updates!
+                            </p>
+                            <form class="row g-3">
+
+                                <div>
+                                    <input type="text" class="form-control" id="username" name="username" value="" placeholder="Name">
+                                </div>
+                                <div class="">
+                                    <input type="Email" class="form-control" id="inputEmail" name="email" value="" placeholder="Email">
+                                </div>
+                                <div>
+                                    <button type="submit" class="btn col-12">Subscribe</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
     <button type="button" class="btn btn-floating btn-md" id="btn-back-to-top">
   <i class="fas fa-arrow-up"></i>
 </button>
@@ -619,51 +673,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script>
-        let nav = document.getElementById("nav");
-        let logo = document.querySelector(".navbar-brand img");
-        let mybutton = document.getElementById("btn-back-to-top");
-
-        let sticky = nav.offsetHeight;
-
-        window.onscroll = function() {
-            myFunction();
-            scrollFunction();
-
-        };
-
-        function myFunction() {
-            if (window.pageYOffset >= sticky) {
-                nav.classList.add("sticky");
-                logo.setAttribute('src', './imgs/catBlack.svg');
-                nav.style.boxShadow = '-5px -2px 6px #eee';
-                nav.style.zIndex = 333
-            } else {
-                nav.classList.add("sticky");
-                nav.style.zIndex = 333;
-                logo.setAttribute('src', './imgs/catBlack.svg')
-                nav.style.boxShadow = 'none';
-            }
-        }
-        // When the user clicks on the button, scroll to the top of the document
-        mybutton.addEventListener("click", backToTop);
-
-        function backToTop() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-
-        function scrollFunction() {
-            if (
-                document.body.scrollTop > 20 ||
-                document.documentElement.scrollTop > 20
-            ) {
-                mybutton.style.display = "block";
-            } else {
-                mybutton.style.display = "none";
-            }
-        }
-    </script>
+    <script src="./js/shared.js"></script>
 
 </body>
 
