--- a/Committees.html
+++ b/Committees.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item align-items-lg-center justify-content-lg-center d-flex">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
                         <a class="nav-link " href="Events.html">Events</a>
