--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
             <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item align-items-lg-center d-flex justify-content-lg-center ">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item align-items-lg-center justify-content-lg-center d-flex">
-                        <a class="nav-link" href="About.html">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
                         <a class="nav-link" href="Events.html">Events</a>
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="Committees.html">Committees</a>
                     </li>
                     <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
-                        <a class="nav-link" href="ContactUs.html">Contact us</a>
+                        <a class="nav-link" href="ContactUs.html">Contact Us</a>
                     </li>
                     <li class="nav-item  d-lg-none">
                         <span class="navbar-text d-grid gap-2 mx-2 newsletter">
