--- a/About.html
+++ b/About.html
@@ -125,23 +125,21 @@
         <div class="container">
             <h2>Our Hierarchy</h2>
             <div class="row justify-content-center">
+                <ul class="col-6 col-md-6 col-lg-3  list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
+                    <li>
+                        <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
+                    </li>
+
+                    <li>
+                        <h4>Eng. Hisham Elsawy</h4>
+                    </li>
+                    <li>
+                        <h5 class="mx-md-5">CAT Founder</h5>
+                    </li>
+                </ul>
                 <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
                     <li class="active">
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
-
-                    </li>
-
-
-                    <li>
-                        <h4>Eng. Hisham Elsawy</h4>
-                    </li>
-                    <li>
-                        <h5 class="mx-md-5">CAT Founder</h5>
-                    </li>
-                </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
-                    <li>
-                        <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
                     <li>
                         <h4>Eng. Hisham Elsawy</h4>
@@ -163,21 +161,6 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
-                    <li>
-                        <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
-                    </li>
-                    <li>
-                        <h4>Eng. Hisham Elsawy</h4>
-                    </li>
-                    <li>
-                        <h5 class="mx-md-5">CAT Founder</h5>
-                    </li>
-                </ul>
-
-
-
 
 
             </div>
@@ -199,7 +182,7 @@
 
             </div>
             <div class="row justify-content-center">
-                <ul class=" col-6 col-md-6 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
+                <ul class=" col-6 col-lg-5 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
 
@@ -211,7 +194,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
+                <ul class=" col-6 col-lg-6 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -224,7 +207,7 @@
                 </ul>
             </div>
 
-            <div class="row justify-content-evenly">
+            <div class="row justify-content-around">
                 <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
@@ -358,7 +341,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
+                <ul class=" col-6 col-lg-5 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
@@ -369,7 +352,7 @@
                         <h5 class="mx-md-5">CAT Founder</h5>
                     </li>
                 </ul>
-                <ul class=" col-6 col-md-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
+                <ul class=" col-6 col-lg-6 col-lg-3 list-unstyled justify-content-center d-flex flex-column gap-2  align-items-center">
                     <li>
                         <img src="./imgs/close-up-portrait-young-man-isolated-black-studio_155003-16842.jpg" class="img-responsive img-fluid mx-md-3" alt="CAT Reloaded Vector">
                     </li>
