--- a/ContactUs.html
+++ b/ContactUs.html
@@ -91,15 +91,15 @@
                 <form class="form-horizontal col-md-10 col-lg-8">
                     <div class="row">
                         <div class="mb-3">
-                            <input type="text" class="form-control" placeholder="Full Name">
+                            <input type="text" class="form-control" placeholder="Full Name" required>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col">
-                            <input type="email" class="form-control" placeholder="Email">
+                            <input type="email" class="form-control" placeholder="Email" required>
                         </div>
                         <div class="col">
-                            <input type="tel" class="form-control" placeholder="Phone">
+                            <input type="tel" class="form-control" placeholder="Phone" required>
                         </div>
                     </div>
                     <div class="row">
