--- a/index.html
+++ b/index.html
@@ -288,6 +288,13 @@
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
                                             <img src="./imgs/kawen.png" class="img-fluid rounded" alt="project1">
+                                            <div class="overlay">
+                                                <h5>Soon..</h5>
+                                                <div class="progress">
+                                                    <span></span>
+                                                </div>
+
+                                            </div>
                                         </div>
                                         <div class="col-md-12 col-lg-8">
                                             <div class="card-body">
@@ -301,8 +308,8 @@
                                     Read More..
                                  </a>
                                                 <a class="btn outline-cat-button active">
-                                   Visit Website
-                                 </a>
+                                                    Waiting...
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -314,6 +321,13 @@
                                     <div class="row g-0">
                                         <div class="col-md-12 col-lg-4">
                                             <img src="./imgs/kawen.png" class="img-fluid rounded" alt="project2">
+                                            <div class="overlay">
+                                                <h5>Soon..</h5>
+                                                <div class="progress">
+                                                    <span></span>
+                                                </div>
+
+                                            </div>
                                         </div>
                                         <div class="col-md-12 col-lg-8">
                                             <div class="card-body">
@@ -326,7 +340,7 @@
                                     Read More.. 
                                  </a>
                                                 <a class="btn outline-cat-button active">
-                                   Visit Website
+                                   Waiting...
                                  </a>
                                             </div>
                                         </div>
