--- a/ContactUs.html
+++ b/ContactUs.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="Events.html">Events</a>
                     </li>
                     <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
-                        <a class="nav-link" href="#">CATazine</a>
+                        <a class="nav-link" href="https://blog.catreloaded.org">CATazine</a>
                     </li>
                     <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
                         <a class="nav-link" href="Committees.html">Committees</a>
@@ -55,7 +55,7 @@
                 </ul>
                 <span class="navbar-text d-grid gap-2 mx-2 newsletter d-none d-lg-grid">
 
-                    <button type="button" class="btn btn-large"  data-bs-toggle="modal" data-bs-target="#newsletterModal">newsletter</button>
+                    <button type="button" class="btn btn-large"  data-bs-toggle="modal" data-bs-target="#newsletterModal">NewsLetter</button>
                 </span>
 
             </div>
@@ -85,7 +85,7 @@
     <!--section of Contactus-->
     <section class="contactus">
         <div class="container">
-            <h2>Write to us</h2>
+            <h2>Write To Us</h2>
             <div class="row justify-content-center align-items-center">
 
                 <form class="form-horizontal col-md-10 col-lg-8">
