--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="Events.html">Events</a>
                     </li>
                     <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
-                        <a class="nav-link" href="#">CATazine</a>
+                        <a class="nav-link" href="https://blog.catreloaded.org">CATazine</a>
                     </li>
                     <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
                         <a class="nav-link" href="Committees.html">Committees</a>
@@ -304,9 +304,9 @@
                                                     belief, Lorem
 
                                                 </p>
-                                                <a class="btn outline-cat-button ">
-                                    Read More..
-                                 </a>
+                                                <a class="btn outline-cat-button " href="https://www.behance.net/gallery/107550583/Kawen-interactive-CS-learning-website?tracking_source=search_users_null">
+                                                    Read More.. 
+                                                 </a>
                                                 <a class="btn outline-cat-button active">
                                                     Waiting...
                                                 </a>
@@ -336,7 +336,7 @@
                                                 <p class="card-text lead">Lorem Ipsum is simply dummy dolor unknown printer text of the printing and typesetting dolor industry. Lorem Ipsum has been the industry's standard dummy when an unknown printer. dolo Contrary to popular
                                                     belief, Lorem
                                                 </p>
-                                                <a class="btn outline-cat-button ">
+                                                <a class="btn outline-cat-button " href="https://www.behance.net/gallery/107550583/Kawen-interactive-CS-learning-website?tracking_source=search_users_null">
                                     Read More.. 
                                  </a>
                                                 <a class="btn outline-cat-button active">
