--- a/Error.html
+++ b/Error.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="Events.html">Events</a>
                     </li>
                     <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
-                        <a class="nav-link" href="#">CATazine</a>
+                        <a class="nav-link" href="https://blog.catreloaded.org">CATazine</a>
                     </li>
                     <li class="nav-item align-items-lg-center d-flex justify-content-lg-center">
                         <a class="nav-link" href="Committees.html">Committees</a>
