--- a/ContactUs.html
+++ b/ContactUs.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="CAT Reloaded Team in Mansoura University">
     <link rel="icon" type="image/png" sizes="16x16" href="imgs/titleCatLogo.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Poppins:wght@400;500&family=Raleway:wght@700&display=swap" rel="stylesheet">
